Gnome-shell-3.32: [SearchDisplay] Stop adding anti-overlap padding for its child StBoxLayout
Follow the upstream change for 3.33/3.34 cycle.

--- a/src/shell/sass/gnome-shell/_common.scss
+++ b/src/shell/sass/gnome-shell/_common.scss
@@ -3150,9 +3150,15 @@ $grid_size: 136px;
 //  ***************************/
 
 // horizontal padding to make sure scrollbars or dash don't overlap content
-.search-display > StBoxLayout,
-.all-apps,
-.frequent-apps > StBoxLayout { padding: 0 88px 10px 88px; }
+@if $ver < 3.31 {
+  .search-display > StBoxLayout,
+  .all-apps,
+  .frequent-apps > StBoxLayout { padding: 0 88px 10px 88px; }
+}
+@else { // for 3.33/34 cycle
+  .all-apps,
+  .frequent-apps > StBoxLayout { padding: 0 88px 10px 88px; }
+}
 
 %status_text {
   @include fontscaling(2.0);
